# libuuid

./: .clang-format  CMakeLists.txt  all-io.h  c.h  clear.c  compare.c  configure.ac  copy.c  gen_uuid.c  isnull.c  pack.c  parse.c  randutils.c  randutils.h  test_uuid.c  unpack.c  unparse.c  uuid.h  uuid.pc.in  uuidP.h  uuid_time.c  uuidd.h
